load("@rules_zig//zig:defs.bzl", "BINARY_KIND", "zig_binary")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
# load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")

zig_binary(
    name = "libstdc++-stubs-generator",
    main = "main.zig",
    kind = BINARY_KIND.exe,
    visibility = ["//visibility:public"],
)

PLATFORMS = [
    "//platforms:darwin_arm64",
    "//platforms:darwin_amd64",
    "//platforms:linux_arm64_musl",
    "//platforms:linux_amd64_musl",
]

[
    platform_transition_binary(
        name = "libstdc++-stubs-generator-" + platform.split(":")[1],
        binary = ":libstdc++-stubs-generator",
        target_platform = platform,
    )
    for platform in PLATFORMS
]
    
filegroup(
    name = "all_platforms",
    srcs = [
        "libstdc++-stubs-generator-{}".format(platform.split(":")[1])
        for platform in PLATFORMS
    ],
)
