module(
    name = "libstdcxx-stubs-generator",
    version = "0.0.1"
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_zig", version = "0.12.2")

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.index(file = "//:zig_index.json")
zig.toolchain(zig_version = "0.14.0")
zig.mirrors(urls = [
    "https://mirror.zml.ai/zig",
])
use_repo(zig, "zig_toolchains")

register_toolchains("@rules_zig//zig/target:all", dev_dependency = True)
register_toolchains("@zig_toolchains//:all", dev_dependency = True)
